--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
   },
   "lint-staged": {
     "*.{js,vue}": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"//,
+      //"git add"
     ]
   }
 }
